paid/force-app/main/default/objects/Paid_Refund__c/Paid_Refund__c.object-meta.xml
<CustomObject>
    <label>Paid Refund</label>
    <nameField>
        <label>Paid Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Refund</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>