paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Base_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Base_Currency_Amount__c</fullName>
    <label>Paid Base Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>