paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Base_Currency_FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>Paid_Base_Currency_FX_Rate__c</fullName>
    <label>Paid Base Currency FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>