paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Check_Number__c</fullName>
    <label>Paid Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>