paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Notes__c.field-meta.xml
<CustomField>
    <fullName>Paid_Notes__c</fullName>
    <label>Paid Notes</label>
    <type>TextArea</type>
</CustomField>