paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Payment_Gateway_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Gateway_Transaction_ID__c</fullName>
    <label>Paid Payment Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>