paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Date__c</fullName>
    <label>Paid Refund Date</label>
    <type>Date</type>
</CustomField>