paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Description__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Description__c</fullName>
    <label>Paid Refund Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>