paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Line_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Line_Creation_Status__c</fullName>
    <label>Paid Refund Line Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>