paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Mode__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Mode__c</fullName>
    <label>Paid Refund Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>