paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Number__c</fullName>
    <displayFormat>R-{000}</displayFormat>
    <label>Paid Refund Number</label>
    <type>AutoNumber</type>
</CustomField>