paid/force-app/main/default/objects/Paid_Refund__c/fields/Paid_Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Refund_Type__c</fullName>
    <label>Paid Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>